--- a/sixfiveohtwo/Cargo.toml
+++ b/sixfiveohtwo/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "r6502"
+name = "sixfiveohtwo"
 version = "0.1.0"
 authors = ["Marcus Borkenhagen <m@fritschy.de>"]
 edition = "2018"
@@ -7,6 +7,3 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#cursive = "0.16"
-stopwatch = "0.0.7"
-sixfiveohtwo = { path = "sixfiveohtwo/" }
