--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#cursive = "0.16"
+cursive = "0.16"
 stopwatch = "0.0.7"
 sixfiveohtwo = { path = "sixfiveohtwo/" }
+clap = "*"
 
 [profile.release]
 lto = true
